; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_aram.c___ARClearInterrupt.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_aram.c___ARClearInterrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_dspReg = common dso_local global i32* null, align 8
@DSPCR_DSPINT = common dso_local global i32 0, align 4
@DSPCR_AIINT = common dso_local global i32 0, align 4
@DSPCR_ARINT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @__ARClearInterrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__ARClearInterrupt() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @_dspReg, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 5
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @DSPCR_DSPINT, align 4
  %6 = load i32, i32* @DSPCR_AIINT, align 4
  %7 = or i32 %5, %6
  %8 = xor i32 %7, -1
  %9 = and i32 %4, %8
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = load i32, i32* @DSPCR_ARINT, align 4
  %12 = or i32 %10, %11
  %13 = load i32*, i32** @_dspReg, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 5
  store i32 %12, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
